@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.0.0): do not edit by hand
+% Generated by roxygen2 (4.0.1): do not edit by hand
 \name{buildSRMSyntaxLatent}
 \alias{buildSRMSyntaxLatent}
 \title{Build lavaan syntax for a Social Relations Model with roles ("Family SRM")}
@@ -6,7 +6,7 @@
 buildSRMSyntaxLatent(roles, var.id, self = FALSE, IGSIM = list(),
   drop = "default", err = "default", means = FALSE, diff = FALSE,
   pairwise = FALSE, groupnames = NULL, add.variable = c(),
-  selfmode = "cor", ...)
+  selfmode = "cor", noNegVar = TRUE, ...)
 }
 \arguments{
 \item{roles}{A vector with all role labels.}
@@ -24,6 +24,8 @@ buildSRMSyntaxLatent(roles, var.id, self = FALSE, IGSIM = list(),
 \item{selfmode}{Defines the style how the selfratings are combined with the latent actor and partner effects. If \code{selfmode="cor"} they are correlated (as in REFERENCE), if \code{selfmode="kq"} the k and q paths are calculated (see Kenny & West, 2010)}
 
 \item{add.variable}{Not yet fully implemented: Add external variables to the model syntax.}
+
+\item{noNegVar}{Should variance estimates be constrained to be positive?}
 
 \item{...}{Additional arguments (not documented yet)}
 
