@@ -1,11 +1,11 @@
-% Generated by roxygen2 (4.0.0): do not edit by hand
+% Generated by roxygen2 (4.0.1): do not edit by hand
 \name{fSRM}
 \alias{fSRM}
 \title{Run a Social Relations Model with roles ("Family SRM")}
 \usage{
 fSRM(formula = NULL, data, drop = "default", add = "", means = FALSE,
   pairwise = FALSE, diff = FALSE, IGSIM = list(), add.variable = c(),
-  syntax = "", group = NULL, ..., setZero = "none")
+  syntax = "", group = NULL, noNegVar = TRUE, ...)
 }
 \arguments{
 \item{formula}{A formula that defines the variable names. Should be in one of following formats: (1) Single manifest dependent variable: DV ~ actor.id * partner.id | group.id, (2) Multiple indicators for dependent variable: DV1/DV2/DV3 ~ actor.id * parter.id | group.id.}
@@ -32,7 +32,7 @@ fSRM(formula = NULL, data, drop = "default", add = "", means = FALSE,
 
 \item{diff}{Compare groups with the delta method? You need to specify a group identifier in parameter \code{group}. If \code{diff = TRUE} and \code{means = FALSE}, only variances are compared between groups. If \code{diff = TRUE} and \code{means = TRUE}, variances and means are compared between groups.}
 
-\item{setZero}{Should misbehaving variances be set to zero? If "negative", all negative variances are constrained to zero. If "nonsig", all nonsignificant variances are constrained to zero. Please note: The purpose of this function is to reproduce published results; usually it is *not* recommended to set non-significant variances to zero!}
+\item{noNegVar}{Should variance estimates be constrained to be positive?}
 }
 \description{
 Run a Social Relations Model with roles ("Family SRM")
