@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.0.0): do not edit by hand
+% Generated by roxygen2 (4.0.1): do not edit by hand
 \name{update.fSRM}
 \alias{update.fSRM}
 \title{Rerun a fSRM model with new parameters}
